--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "json-server": "^0.16.1",
+    "regenerator-runtime": "^0.13.7",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1",
     "vuex": "^3.5.1"
