--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "regenerator-runtime": "^0.13.7",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1",
+    "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
