--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.4.3",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "webpack": "^4.44.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
@@ -24,7 +25,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-cli": "^3.3.12"
   },
   "eslintConfig": {
     "root": true,
